# apigenome

./: .cmd  .gitignore  .pversion  .travis.yml  LICENSE  Makefile  Makefile.am  Makefile.in  Makefile.vars  README.md  config.h  config.h.in  config.status  configure  configure.ac  libtool
data/: Makefile  Makefile.am  Makefile.in
data/YAML-AppConfig-0.19/: MYMETA.json  MYMETA.yml  Makefile
data/YAML-AppConfig-0.19/blib/man3/: YAML::AppConfig.3pm
data/YAML-AppConfig-0.19/t/data/: dump.yaml
htslib/: .gitignore  .travis.yml  Makefile  Makefile.am  Makefile.bk  Makefile.in  version.h
htslib/.deps/: bgzf.Po  bgzip.Po  cram_codecs.Po  cram_decode.Po  cram_encode.Po  cram_external.Po  cram_index.Po  cram_io.Po  cram_samtools.Po  cram_stats.Po  faidx.Po  files.Po  hfile.Po  hfile_net.Po  hts.Po  kfunc.Po  knetfile.Po  kstring.Po  mFILE.Po  md5.Po  open_trace_file.Po  pooled_alloc.Po  rANS_static.Po  regidx.Po  sam.Po  sam_header.Po  string_alloc.Po  synced_bcf_reader.Po  tabix.Po  tbx.Po  thread_pool.Po  vcf.Po  vcf_sweep.Po  vcfutils.Po  vlen.Po  zfio.Po
libnmf/: Makefile  Makefile.am  Makefile.in  calculatemaxchange.c  calculatemaxchange_singleprec.c  calculatenorm.c  calculatenorm_singleprec.c  calculatesvd.c  calculatesvd_singleprec.c  checkarguments.c  checkarguments_singleprec.c  checkmatrices.c  checkmatrices_singleprec.c  cpmidx_double.c  cpmidx_float.c  generatematrix.c  generatematrix_singleprec.c  getattrvalvsclassoccurence.c  getattrvalvsclassoccurence_singleprec.c  getentropy.c  getentropy_singleprec.c  getinfogainforattribute.c  getinfogainforattribute_singleprec.c  infogain.c  infogain_openmp.c  infogain_openmp_singleprec.c  infogain_singleprec.c  loadmatrix.c  loadmatrix_singleprec.c  nmf_als.c  nmf_als_singleprec.c  nmf_alspg.c  nmf_alspg_singleprec.c  nmf_bayes.c  nmf_bayes_singleprec.c  nmf_fast.c  nmf_fast_singleprec.c  nmf_main.c  nmf_mu.c  nmf_mu_singleprec.c  (+18 more)
libnmf/.deps/: calculatemaxchange.Po  calculatemaxchange_singleprec.Po  calculatenorm.Po  calculatenorm_singleprec.Po  calculatesvd.Po  calculatesvd_singleprec.Po  checkarguments.Po  checkarguments_singleprec.Po  checkmatrices.Po  checkmatrices_singleprec.Po  cpmidx_double.Po  cpmidx_float.Po  generatematrix.Po  generatematrix_singleprec.Po  getattrvalvsclassoccurence.Po  getattrvalvsclassoccurence_singleprec.Po  getentropy.Po  getentropy_singleprec.Po  getinfogainforattribute.Po  getinfogainforattribute_singleprec.Po  infogain.Po  infogain_openmp.Po  infogain_openmp_singleprec.Po  infogain_singleprec.Po  loadmatrix.Po  loadmatrix_singleprec.Po  nmf_als.Po  nmf_als_singleprec.Po  nmf_alspg.Po  nmf_alspg_singleprec.Po  nmf_bayes.Po  nmf_bayes_singleprec.Po  nmf_fast.Po  nmf_fast_singleprec.Po  nmf_main.Po  nmf_mu.Po  nmf_mu_singleprec.Po  nmf_neals.Po  nmf_neals_singleprec.Po  nmf_pg.Po  (+14 more)
libnmf/example/: emailclasscolumn.matrix  example  example_withoutdriver.c  final.h.matrix  final_h.matrix  final_w.matrix  h0_rand_64.matrix  hapmap_3.3.nmf10.h.matrix  hapmap_3.3.nmf10.w.matrix  hapmap_3.3.nmf2.h.matrix  hapmap_3.3.nmf2.w.matrix  hapmap_3.3.nmf3.h.matrix  hapmap_3.3.nmf3.w.matrix  hapmap_3.3.nmf4.h.matrix  hapmap_3.3.nmf4.w.matrix  hapmap_3.3.nmf5.h.matrix  hapmap_3.3.nmf5.w.matrix  hapmap_3.3.nmf6.h.matrix  hapmap_3.3.nmf6.w.matrix  hapmap_3.3.nmf7.h.matrix  hapmap_3.3.nmf7.w.matrix  hapmap_3.3.nmf8.h.matrix  hapmap_3.3.nmf8.w.matrix  hapmap_3.3.nmf9.h.matrix  hapmap_3.3.nmf9.w.matrix  nmf
libnmf/include/: blaslapack.h  calculatesvd_singleprec.h  checkarguments_singleprec.h  checkmatrices_singleprec.h  common.h  cpmidx_float.h  generatematrix_singleprec.h  getattrvalvsclassoccurence.h  getattrvalvsclassoccurence_singleprec.h  getentropy.h  getentropy_singleprec.h  getinfogainforattribute.h  getinfogainforattribute_singleprec.h  infogain.h  infogain_openmp.h  infogain_openmp_singleprec.h  infogain_singleprec.h  loadmatrix_singleprec.h  nmf_als_singleprec.h  nmf_alspg_singleprec.h  nmf_bayes.h  nmf_bayes_singleprec.h  nmf_fast.h  nmf_fast_singleprec.h  nmf_mu_singleprec.h  nmf_neals_singleprec.h  nmf_pg_singleprec.h  nmfdriver.h  nmfdriver_singleprec.h  pg_subprob_h_singleprec.h  pg_subprob_w_singleprec.h  randnumber_singleprec.h  setdefaultopts_singleprec.h  storematrix_singleprec.h
scripts/: Makefile  Makefile.am  Makefile.in  bed-tss-match  cloudify  cram-vb-xy-index  cram-vt-discover  demux-fastq  draw-afs  dropseq-resolve-barcode-trimming  dsc-filt-norm-mtx  dsc-seurat-default-analysis  gtf2GenePred  hyunlib.pm  lftp-download  merge-tsv-generic  mift  now-seq-batch  now-seq-each  now-seq-scan  rs2vcf  run-make  tsv-combine-list  vcf-add-rsid  vcf-apply-external-filter  vcf-combine-gls  vcf-delta-svm  vcf-eval-trio-phasing  vcf-filter-ped-by-mendel  vcf-find-duplicate-from-union-sites  vcf-gt-vt-sample  vcf-infer-ped  vcf-issac-summary  vcf-liftover  vcf-match-sample-ids  vcf-match-sparse-offsets  vcf-milk-filter  vcf-milk-svm-filter  vcf-pass-variants  vcf-summary  (+7 more)
src/: Makefile  Makefile.am  Makefile.in  MathMatrix.cpp  MathMatrix.h  MathVector.cpp  MathVector.h  PhredHelper.cpp  ancestry_estimator.cpp  ancestry_estimator.h  augmented_bam_record.cpp  augmented_bam_record.h  bam_filtered_reader.h  bam_ordered_reader.h  bam_pool.h  bcf_filter_arg.h  bcf_filtered_reader.cpp  bcf_filtered_reader.h  bcf_ordered_reader.cpp  bcf_variant_key.h  bcfast.cpp  bh_tsne.cpp  cmd_bed_delta_svm_train.cpp  cmd_bed_matched_shuffle.cpp  cmd_bed_shuffle.cpp  cmd_bgen_to_vcf.cpp  cmd_bwa_pipe.cpp  cmd_bwa_pipe.h  cmd_cram_compare_bqs.cpp  cmd_cram_context_indel_analysis.cpp  cmd_cram_demuxlet.cpp  cmd_cram_dense_genotype.cpp  cmd_cram_flagstat.cpp  cmd_cram_freemux.cpp  cmd_cram_joint_genotype.cpp  cmd_cram_mux_pileup.cpp  cmd_cram_procap_detect.cpp  cmd_cram_simul_contam.cpp  cmd_cram_simuxlet.cpp  cmd_cram_sort_custom.cpp  (+71 more)
