dist_bin_SCRIPTS = \
	align-dropseq \
	align-pro \
	bam-quick-peek-each \
	bam-quick-peek-batch \
	bed-diff \
	bed-tss-match \
	cel-extract-intensity \
	count-dropseq \
	count-dropseq-unit \
	draw-afs \
	dropseq-resolve-barcode-trimming \
	dropseq-kallisto \
	demux-fastq \
	gene-conv-names \
	gtf2GenePred \
	inspect-sv \
        merge-fastq \
	merge-tsv-generic \
	now-seq-each \
	now-seq-batch \
	paste-pileup-pro \
	pileup-pro \
	rev-trim \
	run-make \
	tsv-join \
	vcf-delta-svm \
	vcf-extract-gt-only \
	vcf-resolve-chrX-hets \
	vcf-add-rsid \
	vcf-milk-filter \
	vcf-f2-sharing \
	vcf-issac-summary \
	vcf-liftover \
	vcf-lookup-rsid \
	vcf-summary \
	vcf-summary-merge \
	vcf-summary-v2 \
	yipe \
	epstopdf \
	hyunlib.pm wGetOptions.pm 
