dist_bin_SCRIPTS = \
	align-dropseq \
	align-pro \
	bam-quick-peek-each \
	bam-quick-peek-batch \
	bed-diff \
	bed-tss-match \
	cel-extract-intensity \
	cloudify \
	count-dropseq \
	count-dropseq-unit \
	cram-vt-discover \
	cram-vb-xy-index \
	draw-afs \
	dropseq-resolve-barcode-trimming \
	dropseq-kallisto \
	dsc-seurat-default-analysis \
	demux-fastq \
	fasta-lr-dist \
	fbin-lookup \
	gene-conv-names \
	gtf2GenePred \
	inspect-sv \
        merge-fastq \
	merge-tsv-generic \
	now-seq-each \
	now-seq-batch \
	paste-pileup-pro \
	pileup-pro \
	rs2vcf \
	rev-trim \
	run-make \
	tsv-join \
	vcf-apply-external-filter \
	vcf-combine-gls \
	vcf-delta-svm \
	vcf-eval-trio-phasing \
	vcf-extract-gt-only \
	vcf-resolve-chrX-hets \
	vcf-add-rsid \
	vcf-match-sample-ids \
	vcf-milk-filter \
	vcf-f2-sharing \
	vcf-infer-ped \
	vcf-issac-summary \
	vcf-liftover \
	vcf-lookup-rsid \
	vcf-view-gt \
	vcf-pass-variants \
	vcf-summary \
	vcf-summary-merge \
	vcf-summary-v2 \
	vcf-svm-milk-filter \
	vcf-svm-ext-filter \
	vcf-svm-generic-filter \
	vt-merge-variants \
	yipe \
	epstopdf \
	hyunlib.pm wGetOptions.pm 
